data/derived/comb/progs/unify/prog1100.ml.out
Characters 50-53:
  let fixpoint (f,b) = wwhile((let k x = f x = x in k b), b);;
                                                    ^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
